Fixed text overflow css, added header

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -4,7 +4,7 @@
   border-radius: 5px;
   background-color: rgb(221, 174, 19);
   color: #ffffff;
-  opacity: 0.6;
+  opacity: 0.8;
   transition: opacity 0.1s ease-in;
   font-size: 10px;
   text-transform: uppercase;
